page about finished

--- a/src/index.css
+++ b/src/index.css
@@ -350,3 +350,7 @@ template {
   display: none;
 }
 /* ............. END NORMALIZE .................... */
+
+.isActive {
+  color: tomato !important;
+}
